--- a/_data/pageconfig/our-strategic-advisory-solutions.yml
+++ b/_data/pageconfig/our-strategic-advisory-solutions.yml
@@ -1,6 +1,7 @@
 tagline_intro: Our Solutions
 tagline_main: AxOps™ Strategic Advisory
-site_url: https://localhost:4000
+#site_url: https://localhost:4000
+site_url: https://axopstech.github.io
 members:
   -
     name: Project Management
