--- a/_data/pageconfig/our-strategic-advisory-solutions.yml
+++ b/_data/pageconfig/our-strategic-advisory-solutions.yml
@@ -1,7 +1,6 @@
-tagline_intro: Strategic Advisory Solutions
+tagline_intro: Strategic Advisory
 tagline_href: /our-solutions
 tagline_main: "Leverage Expert Guidance, for Transformative Results"
-#site_url: https://localhost:4000
 site_url: https://axopstech.github.io
 members:
   -
