--- a/_data/pageconfig/our-strategic-advisory-solutions.yml
+++ b/_data/pageconfig/our-strategic-advisory-solutions.yml
@@ -1,5 +1,5 @@
 tagline_intro: Strategic Advisory
-tagline_href: /our-solutions
+tagline_href: /solutions
 tagline_main: "Leverage Expert Guidance, for Transformative Results"
 site_url: https://axopstech.github.io
 members:
@@ -7,13 +7,13 @@ members:
     name: Project Management
     image_src: &site_url /assets/img/illustrations/custom/solutions-project-management.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-project-management.jpg 2x
-    url: &site_url /our-solutions/strategic-advisory/project-management
+    url: &site_url /solutions/strategic-advisory/project-management
     role: Ask, and consider it done &#127919;
 
   -
     name: Workflow Optimisation
     image_src: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg 2x
-    url: &site_url /our-solutions/strategic-advisory/workforce-optimisation
+    url: &site_url /solutions/strategic-advisory/workforce-optimisation
     role: Upskill with confidence &#128588;
   
