--- a/_data/pageconfig/our-strategic-advisory-solutions.yml
+++ b/_data/pageconfig/our-strategic-advisory-solutions.yml
@@ -5,15 +5,15 @@ site_url: https://axopstech.github.io
 members:
   -
     name: Project Management
-    image_src: &site_url /assets/img/illustrations/custom/solutions-project-management.jpg
-    image_srcset: &site_url /assets/img/illustrations/custom/solutions-project-management.jpg 2x
+    image_src: &site_url /assets/img/illustrations/custom/solutions-project-management.webp
+    image_srcset: &site_url /assets/img/illustrations/custom/solutions-project-management.webp 2x
     url: &site_url /solutions/strategic-advisory/project-management
     role: Ask, and consider it done &#127919;
 
   -
     name: Workflow Optimisation
-    image_src: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg
-    image_srcset: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg 2x
+    image_src: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.webp
+    image_srcset: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.webp 2x
     url: &site_url /solutions/strategic-advisory/workforce-optimisation
     role: Upskill with confidence &#128588;
   
